--- a/src/main/resources/templates/rolled-dice.html
+++ b/src/main/resources/templates/rolled-dice.html
@@ -11,6 +11,11 @@
 
     <div class="guess-results">
         <div class="user-guess">USER GUESS: <span th:text="${n}"></span></div>
+        <div class="dice-roll">DICE ROLL: <span th:text="${diceRoll}"></span></div>
+
+        <div th:if="${diceRoll == n}">You did it!</div>
+        <div th:if="${diceRoll != n}">You did not guess the number. Try again!</div>
+        <button><a href="/roll-dice">Try Again</a></button>
     </div>
 
 </body>
