--- a/src/main/resources/templates/roll-dice.html
+++ b/src/main/resources/templates/roll-dice.html
@@ -9,6 +9,9 @@
 </head>
 <body>
 
+<nav th:include="partials/navbar" :: navbar></nav>
+<header th:include="partials/header" :: header></header>
+
     <div class="numberLinks">
         <a href="/roll-dice/1">1</a>
         <a href="/roll-dice/2">2</a>
@@ -17,6 +20,8 @@
         <a href="/roll-dice/5">5</a>
         <a href="/roll-dice/6">6</a>
     </div>
+
+<footer th:include="partials/footer" :: footer></footer>
 
 
 </body>
