--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,13 @@
 </head>
 <body>
 
+<nav th:include="partials/navbar" :: navbar></nav>
+<header th:include="partials/header" :: header></header>
+
 <h1>This is the home page</h1>
+
+<footer th:include="partials/footer" :: footer></footer>
+
 
 </body>
 </html>
