--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -13,8 +13,10 @@
 
 <header th:include="partials/header" :: header></header>
 
-<div>
-    <h1 th:text="${singlePost}"></h1>
+
+<div th:each="post : ${singlePost}">
+    <h1 th:text="${singlePost.title}"/>
+    <h2 th:text="${singlePost.body}"/>
 </div>
 
 <footer th:include="partials/footer" :: footer></footer>
