--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -13,8 +13,8 @@
 
 <header th:include="partials/header" :: header></header>
 
-
-<div th:each="post : ${allPosts}">
+<div th:text="${title}"></div>
+<div th:each="post : ${posts}">
     <h1 th:text="${post.title}"/>
     <h2 th:text="${post.body}"/>
 </div>
