--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -13,11 +13,15 @@
 
 <header th:include="partials/header" :: header></header>
 
-<div th:text="${title}"></div>
+<div>Blog Posts</div>
 <div th:each="post : ${posts}">
     <h1 th:text="${post.title}"/>
     <h2 th:text="${post.body}"/>
+    <form th:action="@{/posts/delete/${post.id}}" th:method="post">
+        <button>DELETE</button>
+    </form>
 </div>
+
 
 
 <footer th:include="partials/footer" :: footer></footer>
