feat: added Tailwind.css to project

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
+    <link href="/tailwind.css" rel="stylesheet">
     <title>Home</title>
 </head>
 <body>
@@ -10,6 +11,7 @@
 <header th:include="partials/header" :: header></header>
 
 <h1>This is the home page</h1>
+<h4></h4>
 
 <footer th:include="partials/footer" :: footer></footer>
 
