feat: styling updates

--- a/src/main/resources/templates/partials/footer.html
+++ b/src/main/resources/templates/partials/footer.html
@@ -2,11 +2,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
-    <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="/css/tailwind.css">
+    <title>Footer</title>
 </head>
 <body>
 
-<footer th:fragment="footer">
+<footer th:fragment="footer" class="bg-gray-600">
     &copy; 2021 Good Thymes
 </footer>
 </body>
