--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <title>Home</title>
     <!-- include stylesheets, etc here -->
+    <link rel="stylesheet" type="text/css" href="/css/tailwind.css">
 </head>
 <body>
-<nav th:fragment="navbar">
+<nav th:fragment="navbar" class="2xl:bg-green-500">
     <!-- awesome navbar goes here -->
-    <ul>
+    <ul class="flex-box">
         <li><a href="">Home</a></li>
         <li><a href="">News</a></li>
         <li><a href="">Contact</a></li>
