--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
-    <link href="/tailwind.css" rel="stylesheet">
+    <link href="/.css" rel="stylesheet">
     <title>Home</title>
 </head>
 <body>
