--- a/src/main/resources/templates/partials/header.html
+++ b/src/main/resources/templates/partials/header.html
@@ -2,7 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="head">
     <meta charset="UTF-8" />
-    <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="/css/tailwind.css">
+    <title>Header</title>
     <!-- include stylesheets, etc here -->
 </head>
 <body>
