--- a/src/main/resources/templates/partials/scripts.html
+++ b/src/main/resources/templates/partials/scripts.html
@@ -5,7 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="/css/tailwind.css">
+    <title>Scripts</title>
 </head>
 <body>
 <!--https://frontbackend.com/thymeleaf/how-to-add-bootstrap-css-and-js-to-thymeleaf-->
