feat: configured tailwind.css, beginning to style

--- a/src/main/resources/templates/partials/header.html
+++ b/src/main/resources/templates/partials/header.html
@@ -7,8 +7,8 @@
     <!-- include stylesheets, etc here -->
 </head>
 <body>
-<header th:fragment="header">
-    <h1>Welcome to Blogger!</h1>
+<header th:fragment="header" class="flex justify-around">
+    <h1 class="border border-black p-0.5 m-1">Welcome to Blogger!</h1>
 </header>
 
 </body>
