--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" type="text/css" href="/css/tailwind.css">
 </head>
 <body>
-<nav th:fragment="navbar" class="2xl:bg-green-500">
+<nav th:fragment="navbar" class="bg-green-300">
     <!-- awesome navbar goes here -->
-    <ul class="flex-box">
-        <li><a href="">Home</a></li>
-        <li><a href="">News</a></li>
-        <li><a href="">Contact</a></li>
-        <li><a href="">About</a></li>
+    <ul class="flex justify-around">
+        <li><a href="">HOME</a></li>
+        <li><a href="">ALL POSTS</a></li>
+        <li><a href="">UPDATES</a></li>
+        <li><a href="">LOGIN</a></li>
     </ul>
 </nav>
 
