--- a/src/main/resources/templates/partials/footer.html
+++ b/src/main/resources/templates/partials/footer.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-<footer th:fragment="footer" class="bg-gray-600">
-    &copy; 2021 Good Thymes
+<footer th:fragment="footer" class="bg-gray-700 text-indigo-100 flex justify-around">
+    <h1>&hearts; 2021 Good Thymes</h1>
 </footer>
 </body>
 </html>
