--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="/css/tailwind.css">
     <title>Index</title>
 </head>
 <body>
@@ -13,12 +14,12 @@
 
 <header th:include="partials/header" :: header></header>
 
-<div>Blog Posts</div>
-<div th:each="post : ${posts}">
-    <h1 th:text="${post.title}"/>
-    <h2 th:text="${post.body}"/>
+<h1>::Latest Posts::</h1>
+<div th:each="post : ${posts}" class="border-2 border-black p-1">
+    <h1 class="uppercase p-0.5" th:text="${post.title}"/>
+    <h2 class="p-0.5" th:text="${post.body}"/>
     <form th:action="@{/posts/delete/${post.id}}" th:method="post">
-        <button>DELETE</button>
+        <button class="border rounded border-black p-0.5">DELETE</button>
     </form>
 </div>
 
