feat: adding cards to blog posts index page

--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -15,12 +15,18 @@
 <header th:include="partials/header" :: header></header>
 
 <h1>::Latest Posts::</h1>
-<div th:each="post : ${posts}" class="border-2 border-black p-1">
-    <h1 class="uppercase p-0.5" th:text="${post.title}"/>
-    <h2 class="p-0.5" th:text="${post.body}"/>
-    <form th:action="@{/posts/delete/${post.id}}" th:method="post">
-        <button class="border rounded border-black p-0.5">DELETE</button>
-    </form>
+<div class="max-w-sm w-full lg:max-w-full lg:flex">
+    <div th:each="post : ${posts}" class="border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal">
+        <div class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" style="background-image: url('src/main/resources/static/img/orange.jpg')" title="Woman holding a mug">
+        </div>
+        <p class="uppercase p-0.5 text-xl mb-2 font-bold" th:text="${post.title}"/></p>
+        <div class="p-0.5 text-base" th:text="${post.body}"/>
+        <div>
+            <form th:action="@{/posts/delete/${post.id}}" th:method="post">
+                <button class="border rounded border-black p-0.5">DELETE</button>
+            </form>
+        </div>
+    </div>
 </div>
 
 
