--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -20,7 +20,7 @@
     <label for="body">Body: </label>
     <input type="text" id="body" th:field="*{body}"></textarea>
     <hr>
-    <input type="submit">Submit New Post</input>
+    <input type="submit"></input>
 </form>
 
 <footer th:include="partials/footer" :: footer></footer>
