--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -14,6 +14,11 @@
         <li><a href="">ALL POSTS</a></li>
         <li><a href="">UPDATES</a></li>
         <li><a href="">LOGIN</a></li>
+        <li>
+            <form th:action="@{/logout}" th:method="post">
+                <button class="btn-link btn" style="margin-top: 8px">Logout</button>
+            </form>
+        </li>
     </ul>
 </nav>
 
