--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -15,14 +15,14 @@
 <header th:include="partials/header" :: header></header>
 
 <h1>::Latest Posts::</h1>
-<div class="w-full lg:max-w-full lg:flex">
-    <div th:each="post : ${posts}" class="border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal">
-    <img class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" src="img/orange.jpg" alt="blog_header">
-<!--        <img class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" src="img/orange.jpg">-->
-    <div class="mb-8">
-        <p class="uppercase p-0.5 text-xl mb-2 font-bold" th:text="${post.title}"/></p>
-        <div class="p-0.5 text-base" th:text="${post.body}"/>
-    </div>
+<div class="flex-box sm:flex-col flex-wrap lg:grid lg:grid-cols-3 m-1">
+    <div th:each="post : ${posts}" class="m-1 flex-none flex-wrap col-span-1 row-span-2 border border-gray-400 lg:border-gray-400 bg-white rounded p-4 flex flex-col justify-between leading-normal">
+        <img class="h-48 lg:w-auto flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" src="img/orange.jpg" alt="blog_header">
+    <!--        <img class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" src="img/orange.jpg">-->
+        <div class="mb-8">
+            <p class="uppercase p-0.5 text-xl mb-2 font-bold" th:text="${post.title}"/></p>
+            <div class="p-0.5 text-base" th:text="${post.body}"/>
+        </div>
         <div class="member flex items-center">
             <img class="w-10 h-10 rounded-full mr-4" src="img/placeholder-avatar.jpeg">
             <div class="text-sm">
