feat: updating navbar links on each page

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,8 +10,7 @@
 <nav th:include="partials/navbar" :: navbar></nav>
 <header th:include="partials/header" :: header></header>
 
-<h1>This is the home page</h1>
-<h4></h4>
+<h1>Welcome to XPerience!</h1>
 
 <footer th:include="partials/footer" :: footer></footer>
 
