--- a/src/main/resources/templates/posts/search.html
+++ b/src/main/resources/templates/posts/search.html
@@ -9,7 +9,13 @@
 </head>
 <body>
 
+<nav th:include="partials/navbar" :: navbar></nav>
+
+
     <input type="search" placeholder="SEARCH">
+
+<nav th:include="partials/footer" :: footer></nav>
+
 
 </body>
 </html>
