--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -10,13 +10,29 @@
 <nav th:fragment="navbar" class="bg-green-300">
     <!-- awesome navbar goes here -->
     <ul class="flex justify-around">
-        <li><a href="">HOME</a></li>
-        <li><a href="">ALL POSTS</a></li>
-        <li><a href="">UPDATES</a></li>
-        <li><a href="">LOGIN</a></li>
+        <li>
+            <form th:action="@{/}">
+                <button class="btn-link btn" style="margin-top: 8px">HOME</button>
+            </form>
+        </li>
+        <li>
+            <form th:action="@{/posts}">
+                <button class="btn-link btn" style="margin-top: 8px">ALL POSTS</button>
+            </form>
+        </li>
+        <li>
+            <form th:action="@{/login}">
+                <button class="btn-link btn" style="margin-top: 8px">LOGIN</button>
+            </form>
+        </li>
         <li>
             <form th:action="@{/logout}" th:method="post">
-                <button class="btn-link btn" style="margin-top: 8px">Logout</button>
+                <button class="btn-link btn" style="margin-top: 8px">LOGOUT</button>
+            </form>
+        </li>
+        <li>
+            <form th:action="@{/sign-up}">
+                <button class="btn-link btn" style="margin-top: 8px">SIGNUP</button>
             </form>
         </li>
     </ul>
