feat: updating links

--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -21,6 +21,11 @@
             </form>
         </li>
         <li>
+            <form th:action="@{/posts/create}">
+                <button class="btn-link btn" style="margin-top: 8px">CREATE POST</button>
+            </form>
+        </li>
+        <li>
             <form th:action="@{/login}">
                 <button class="btn-link btn" style="margin-top: 8px">LOGIN</button>
             </form>
