--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -23,9 +23,7 @@
             <p class="uppercase p-0.5 text-xl mb-2 font-bold" th:text="${post.title}"/></p>
             <div class="p-0.5 max-h-12 overflow-hidden overflow-ellipsis block" th:text="${post.body}"/>
             <div>
-                <form th:action="@{/posts/${post.id}}">
-                    <button class="flex-row flex-end border border-yellow-600 border-2">Read more...</button>
-                </form>
+                <a th:href="@{|/posts/${post.id}|}">Read more...</a>
             </div>
         </div>
         <div class="member flex items-center">
