--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/css/tailwind.css">
 </head>
 <body>
-<nav th:fragment="navbar" class="bg-green-300">
+<nav th:fragment="navbar" class="bg-green-300 p-1 rounded">
     <!-- awesome navbar goes here -->
     <ul class="flex justify-around">
         <li>
