--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -12,7 +12,7 @@
 
 <nav th:include="partials/navbar" :: navbar></nav>
 
-<header th:include="partials/header" :: header></header>
+<!--<header th:include="partials/header" :: header></header>-->
 
 <h1>::Latest Posts::</h1>
 <div class="flex-box sm:flex-col flex-wrap lg:grid lg:grid-cols-3 m-1">
