--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -11,7 +11,7 @@
 
 <nav th:include="partials/navbar" :: navbar></nav>
 
-<header th:include="partials/header" :: header></header>
+<!--<header th:include="partials/header" :: header></header>-->
 
 <div>
     <h3 th:text="${singlePost.title}"/>
