--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -7,7 +7,7 @@
 <body>
     <nav th:include="partials/navbar" :: navbar></nav>
 
-    <header th:include="partials/header" :: header></header>
+<!--    <header th:include="partials/header" :: header></header>-->
 
     <h1>Hello, <span th:text="${name}">World</span>!</h1>
 
