--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -11,7 +11,7 @@
 
 <nav th:include="partials/navbar" :: navbar></nav>
 
-<header th:include="partials/header" :: header></header>
+<!--<header th:include="partials/header" :: header></header>-->
 
 <form th:action="@{/posts/edit/${post.id}}" th:method="POST" th:object="${post}">
     <label for="title">Title: </label>
