feat: styling fixes and bug checks before pushing for production

--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -18,13 +18,13 @@
     <h6 th:text = "'Authored by ' + ${singlePost.user.email}" />
     <h4 th:text="${singlePost.body}"/>
 
-    <form th:action="@{/posts/edit/${singlePost.id}}" th:method="post">
-        <button>EDIT</button>
-    </form>
+<!--    <form th:action="@{/posts/edit/${singlePost.id}}" th:method="post">-->
+<!--        <button>EDIT</button>-->
+<!--    </form>-->
 
-    <form th:action="@{/posts/delete/${singlePost.id}}" th:method="post">
-        <button>DELETE</button>
-    </form>
+<!--    <form th:action="@{/posts/delete/${singlePost.id}}" th:method="post">-->
+<!--        <button>DELETE</button>-->
+<!--    </form>-->
 
 </div>
 
