--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -14,15 +14,20 @@
 
 <!--<header th:include="partials/header" :: header></header>-->
 
-<h1>::Latest Posts::</h1>
+<div class="mt-3 mb-3">
+    <p class="text-3xl mb-2 text-center">Browse XPeriences</p>
+    <p class="text-center">Here you can find recently posted job experiences written by other users. Ability to search coming soon!</p>
+    <p class="text-center">If you would like to create your own post, please login to an existing account, or make your way to register to join XPerience.</p>
+</div>
+
 <div class="flex-box sm:flex-col flex-wrap lg:grid lg:grid-cols-3 m-1">
     <div th:each="post : ${posts}" class="inline-block m-1 flex-none flex-wrap col-span-1 row-span-2 border border-gray-400 lg:border-gray-400 bg-white rounded p-4 flex flex-col justify-between leading-normal">
         <img class="h-48 lg:w-auto lg:h-48 lg:w-auto flex-none bg-cover rounded text-center overflow-hidden" src="img/orange.jpg" alt="blog_header">
     <!--        <img class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" src="img/orange.jpg">-->
-        <div class="mb-8">
+        <div class="mb-8 flex-col">
             <p class="uppercase p-0.5 h-14 text-xl mb-2 font-bold" th:text="${post.title}"/></p>
-            <div class="p-0.5 max-h-12 overflow-hidden overflow-ellipsis block" th:text="${post.body}"/>
-            <div>
+            <div class="italic p-0.5 max-h-12 overflow-hidden overflow-ellipsis block" th:text="${post.body}"/>
+            <div class="flex-end">
                 <a th:href="@{|/posts/${post.id}|}">Read more...</a>
             </div>
         </div>
@@ -33,11 +38,11 @@
                 <p class="text-gray-600">Exampluary 7, 2738</p>
             </div>
         </div>
-        <div>
-            <form th:action="@{/posts/delete/${post.id}}" th:method="post">
-                <button class="border rounded border-black p-0.5">DELETE</button>
-            </form>
-        </div>
+<!--        <div>-->
+<!--            <form th:action="@{/posts/delete/${post.id}}" th:method="post">-->
+<!--                <button class="border rounded border-black p-0.5">DELETE</button>-->
+<!--            </form>-->
+<!--        </div>-->
     </div>
 </div>
 
