--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -6,38 +6,39 @@
     <!-- include stylesheets, etc here -->
     <link rel="stylesheet" type="text/css" href="/css/tailwind.css">
 </head>
-<body>
-<nav th:fragment="navbar" class="bg-green-300 p-1 rounded">
+<body class="bg-gray-300">
+
+<nav th:fragment="navbar" class="bg-black h-12 align-middle">
     <!-- awesome navbar goes here -->
-    <ul class="flex justify-around">
-        <li>
+    <ul class="flex justify-around align-middle">
+        <li class="border-double p-1.5 bg-yellow-700">
             <form th:action="@{/}">
-                <button class="btn-link btn" style="margin-top: 8px">HOME</button>
+                <button class="text-white">HOME</button>
             </form>
         </li>
-        <li>
+        <li class="border-double p-1.5 bg-yellow-700">
             <form th:action="@{/posts}">
-                <button class="btn-link btn" style="margin-top: 8px">ALL POSTS</button>
+                <button class="text-white">ALL POSTS</button>
             </form>
         </li>
-        <li>
+        <li class="border-double p-1.5 bg-green-800">
             <form th:action="@{/posts/create}">
-                <button class="btn-link btn" style="margin-top: 8px">CREATE POST</button>
+                <button class="text-white">CREATE POST</button>
             </form>
         </li>
-        <li>
-            <form th:action="@{/login}">
-                <button class="btn-link btn" style="margin-top: 8px">LOGIN</button>
+        <li class="border-double p-1.5 bg-green-800">
+          <form th:action="@{/login}">
+                <button class="text-white">LOGIN</button>
             </form>
         </li>
-        <li>
-            <form th:action="@{/logout}" th:method="post">
-                <button class="btn-link btn" style="margin-top: 8px">LOGOUT</button>
+        <li class="border-double p-1.5 bg-green-800">
+           <form th:action="@{/logout}" th:method="post">
+                <button class="text-white">LOGOUT</button>
             </form>
         </li>
-        <li>
+        <li class="border-double p-1.5 bg-green-800">
             <form th:action="@{/sign-up}">
-                <button class="btn-link btn" style="margin-top: 8px">SIGNUP</button>
+                <button class="text-white">SIGNUP</button>
             </form>
         </li>
     </ul>
