--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -27,7 +27,7 @@
         <div class="mb-8 flex-col">
             <p class="uppercase p-0.5 h-14 text-xl mb-2 font-bold" th:text="${post.title}"/></p>
             <div class="italic p-0.5 max-h-12 overflow-hidden overflow-ellipsis block" th:text="${post.body}"/>
-            <div class="flex-end">
+            <div class="flex justify-end">
                 <a th:href="@{|/posts/${post.id}|}">Read more...</a>
             </div>
         </div>
