--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -11,12 +11,15 @@
 <div class="w-full">
     <nav th:fragment="navbar" class="bg-black flex justify-between">
         <!-- awesome navbar goes here -->
-        <div class="logo">
-            <div class="bg-black">
-                <img class="h-10 bg-green-300 pl-1 pr-1" src="img/XPeriencelogo.png" alt="logo">
-            </div>
+        <div class="flex flex-row justify-between">
+
+            <img class="h-10 bg-green-300 pl-1 pr-1" src="img/XPeriencelogo.png" alt="logo">
+
+            <p id="hamburgerbtn" class="md:hidden text-white border border-white">
+                MENU
+            </p>
         </div>
-        <ul class="flex flex-row">
+        <ul class="hidden md:flex md:flex-row" id="mobileMenu">
             <li class="border-double p-1.5">
                 <form th:action="@{/}">
                     <button class="text-white">HOME</button>
@@ -48,11 +51,18 @@
                 </form>
             </li>
         </ul>
+
         <div>
             <img class="h-10 w-10 rounded-full p-1.5" src="img/placeholder-avatar.jpeg" alt="logo">
         </div>
     </nav>
 </div>
 
+<style>
+    .active{
+        display: block;
+    }
+</style>
+<script src="js/js.js"></script>
 </body>
 </html>
