feat: removing hamburger menu for testing

--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -15,11 +15,11 @@
 
             <img class="h-10 bg-green-300 pl-1 pr-1" src="img/XPeriencelogo.png" alt="logo">
 
-            <p id="hamburgerbtn" class="md:hidden text-white border border-white">
-                MENU
-            </p>
+<!--            <p id="hamburgerbtn" class="md:hidden text-white border border-white">-->
+<!--                MENU-->
+<!--            </p>-->
         </div>
-        <ul class="hidden md:flex md:flex-row" id="mobileMenu">
+        <ul class="flex flex-row" id="mobileMenu">
             <li class="border-double p-1.5">
                 <form th:action="@{/}">
                     <button class="text-white">HOME</button>
@@ -58,11 +58,11 @@
     </nav>
 </div>
 
-<style>
-    .active{
-        display: block;
-    }
-</style>
+<!--<style>-->
+<!--    .active{-->
+<!--        display: block;-->
+<!--    }-->
+<!--</style>-->
 <script src="js/js.js"></script>
 </body>
 </html>
