feat: taking out unusable features for deployment

--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -32,7 +32,8 @@
             </li>
             <li class="border-double p-1.5">
                 <form th:action="@{/posts/create}">
-                    <button class="text-white">CREATE POST</button>
+                    <button class="text-white">CREATE
+                    </button>
                 </form>
             </li>
             <li class="border-double p-1.5">
