--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,14 +19,15 @@
             <a th:href="@{|/posts|}" class="border border-3 p-1.5">VIEW ALL XPeriences</a>
         </div>
         <div class="p-1.5">
-            <a th:href="@{|/posts/search|}" class="border border-3 p-1.5">Search XPeriences...</a>
+<!--            <a th:href="@{|/posts/search|}" class="border border-3 p-1.5">Search XPeriences...</a>-->
+            <p class="border border-3 p-1.5">Search XPeriences</p>
         </div>
     </div>
 
     <div class="flex justify-center">
         <p>Not a member? <a th:href="@{|/sign-up|}">Join now!</a></p>
     </div>
-<div>
+</div>
 
 <!--<footer th:include="partials/footer" :: footer></footer>-->
 
