--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -12,9 +12,9 @@
 <div th:if="${param.error}">
     Invalid Username and Password.
 </div>
-<div th:if="${param.logout}">
-    You have been logged out.
-</div>
+<!--<div th:if="${param.logout}">-->
+<!--    You have been logged out.-->
+<!--</div>-->
 
 <form th:action="@{/login}" method="post" >
     <label for="username">Username</label>
