--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,14 +18,14 @@
         <div class="p-1.5">
             <a th:href="@{|/posts|}" class="border border-3 p-1.5">VIEW ALL XPeriences</a>
         </div>
-        <div class="p-1.5">
+<!--        <div class="p-1.5">-->
 <!--            <a th:href="@{|/posts/search|}" class="border border-3 p-1.5">Search XPeriences...</a>-->
-            <p class="border border-3 p-1.5">Search XPeriences</p>
-        </div>
+<!--            <p class="border border-3 p-1.5">Search XPeriences</p>-->
+<!--        </div>-->
     </div>
 
     <div class="flex justify-center">
-        <p>Not a member? <a th:href="@{|/sign-up|}">Join now!</a></p>
+        <p>Not a member? <a th:href="@{|/sign-up|}" class="underline italic">Join now</a> to help others like you get information about jobs they want.</p>
     </div>
 </div>
 
