feat: navbar updates and a link updates

--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -36,7 +36,9 @@
                     </button>
                 </form>
             </li>
-            <p class="text-white">||</p>
+            <li class="p-1.5">
+                <p class="text-white">  ||  </p>
+            </li>
             <li class="border-double p-1.5">
               <form th:action="@{/login}">
                     <button class="text-white">LOGIN</button>
