feat: navbar updates and a link updates

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="flex justify-center">
-        <p>Not a member? <a th:href="@{|/sign-up|}" class="underline italic">Join now</a> to help others like you get information about jobs they want.</p>
+        <p>Not a member? <a th:href="@{|/sign-up|}" class="underline">Join now</a> to help others like you get information about jobs they want.</p>
     </div>
 </div>
 
