--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -17,7 +17,7 @@
 <div class="mt-3 mb-3">
     <p class="text-3xl mb-2 text-center">Browse XPeriences</p>
     <p class="text-center">Here you can find recently posted job experiences written by other users. Ability to search coming soon!</p>
-    <p class="text-center">If you would like to create your own post, please login to an existing account, or make your way to register to join XPerience.</p>
+    <p class="text-center">If you would like to create your own post, please login to an existing account or make your way to SIGNUP to join XPerience.</p>
 </div>
 
 <div class="flex-box sm:flex-col flex-wrap lg:grid lg:grid-cols-3 m-1">
