feat: fixing links

--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -12,8 +12,8 @@
     <nav th:fragment="navbar" class="bg-black flex justify-between">
         <!-- awesome navbar goes here -->
         <div class="flex flex-row justify-between">
-
-            <img class="h-10 bg-green-300 pl-1 pr-1"  th:href="@{|/|}" src="img/XPeriencelogo.png" alt="logo">
+            <a href="@{|/|}"><img class="h-10 bg-green-300 pl-1 pr-1"  th:href="@{|/|}" src="img/XPeriencelogo.png" alt="logo">
+            </a>
 
 <!--            <p id="hamburgerbtn" class="md:hidden text-white border border-white">-->
 <!--                MENU-->
