--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -12,7 +12,7 @@
     <nav th:fragment="navbar" class="bg-black flex justify-between">
         <!-- awesome navbar goes here -->
         <div class="flex flex-row justify-between">
-            <a href="@{|/|}"><img class="h-10 bg-green-300 pl-1 pr-1" src="img/XPeriencelogo.png" alt="logo">
+            <a th:href="@{|/|}"><img class="h-10 bg-green-300 pl-1 pr-1" src="img/XPeriencelogo.png" alt="logo">
             </a>
 
 <!--            <p id="hamburgerbtn" class="md:hidden text-white border border-white">-->
