--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -6,10 +6,10 @@
     <!-- include stylesheets, etc here -->
     <link rel="stylesheet" type="text/css" href="/css/tailwind.css">
 </head>
-<body class="bg-gray-300">
+<body class="bg-grayCustom">
 
 <div class="w-full">
-    <nav th:fragment="navbar" class="bg-black flex justify-between">
+    <nav th:fragment="navbar" class="bg-blackCustom flex justify-between">
         <!-- awesome navbar goes here -->
         <div class="flex flex-row justify-between">
             <a th:href="@{|/|}"><img class="h-10 bg-greenLime pl-1 pr-1" src="img/XPeriencelogo.png" alt="logo">
