feat: custom color additions

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,7 +16,7 @@
     </div>
     <div class="flex justify-center">
         <div class="p-1.5">
-            <a th:href="@{|/posts|}" class="border border-3 p-1.5 bg-greenLime">VIEW ALL XPeriences</a>
+            <a th:href="@{|/posts|}" class="border border-3 p-1.5 bg-greenCustom">VIEW ALL XPeriences</a>
         </div>
 <!--        <div class="p-1.5">-->
 <!--            <a th:href="@{|/posts/search|}" class="border border-3 p-1.5">Search XPeriences...</a>-->
