feat: removed footer for edits

--- a/src/main/resources/templates/partials/footer.html
+++ b/src/main/resources/templates/partials/footer.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-<footer th:fragment="footer" class="bg-gray-700 text-indigo-100 flex justify-around bottom-0">
-    <p>XPerience</p>
-</footer>
+<!--<footer th:fragment="footer" class="bg-grayCustom text-indigo-100 flex justify-around bottom-0">-->
+<!--    <p>XPerience</p>-->
+<!--</footer>-->
 </body>
 </html>
