feat: removed footer for edits

--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -23,7 +23,7 @@
 
             <li class="border-double p-1.5">
                 <form th:action="@{/posts}">
-                    <button class="text-whiteCustom">ALL POSTS</button>
+                    <button class="text-whiteCustom">POSTS</button>
                 </form>
             </li>
             <li class="border-double p-1.5">
@@ -33,7 +33,7 @@
                 </form>
             </li>
             <li class="p-1.5">
-                <p class="text-whiteCustom">  ||  </p>
+                <p class="text-whiteCustom"> || </p>
             </li>
             <li class="border-double p-1.5">
               <form th:action="@{/login}">
