--- a/src/main/resources/static/css/tailwind.css
+++ b/src/main/resources/static/css/tailwind.css
@@ -591,6 +591,11 @@ video {
 
 /*}*/
 
+.body-bg {
+  background-color: #9921e8;
+  background-image: linear-gradient(315dg, #9921e8 0%, #5f72be 74%);
+}
+
 .space-y-0 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
