--- a/src/main/resources/templates/users/sign-up.html
+++ b/src/main/resources/templates/users/sign-up.html
@@ -1,34 +1,57 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8" />
     <title>Sign up</title>
 </head>
-<body>
+<body class="body-bg min-h-screen pt-12 md:pt-20 pb-6 px-2 md:px-0">
 
-<nav th:include="partials/navbar" :: navbar></nav>
+    <nav th:include="partials/navbar" :: navbar></nav>
 
-<div th:if="${param.error}">
-    Username already exists in database.
-</div>
+    <header class="max-w-lg mx-auto">
+        <h1 class="text-4xl font-bold text-whiteCustom text-center">Welcome to XPerience!</h1>
+    </header>
 
-<br><hr><br>
-<h1>Create an account</h1>
-<form th:action="@{/sign-up}" method="POST" th:object="${user}">
-    <label for="username">Username</label>
-    <input id="username" th:field="*{username}" />
+    <main class="bg-whiteCustom max-w-lg mx-auto p-8 md:p-12 my-10 rounded-lg shadow-2xl">
 
-    <label for="email">Email</label>
-    <input id="email" th:field="*{email}" />
+        <section>
+            <h3 class="font-bold text-2xl">We're excited for you to join us!</h3>
+            <p class="text-grayCustom-600 pt-2">Please register below.</p>
+        </section>
 
-    <label for="password">Password</label>
-    <input id="password" type="password" th:field="*{password}" />
+        <section class="mt-10">
+            <form th:action="@{/sign-up}" method="POST" th:object="${user}" class="flex flex-col">
+               <div class="mb-6 pt-3 rounded bg-grayCustom-200">
+                    <label class="block text-grayCustom-700 text-sm font-bold mb-2 ml-3" for="username">Username</label>
+                    <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-gray-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3" id="username" th:field="*{username}" />
+               </div>
+                <div class="mb-6 pt-3 rounded bg-gray-200">
+                    <label class="block text-grayCustom-700 text-sm font-bold mb-2 ml-3" for="email">Email</label>
+                    <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-gray-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3" id="email" th:field="*{email}" />
+                </div>
+                <div class="mb-6 pt-3 rounded bg-gray-200">
+                    <label class="block text-grayCustom-700 text-sm font-bold mb-2 ml-3" for="password">Password</label>
+                    <input class="bg-lightGrayCustom-200 rounded w-full text-grayCustom-700 focus:outline-none border-b-4 border-gray-300 focus:border-greenCustom-600 transition duration-500 px-3 pb-3" id="password" type="password" th:field="*{password}" />
+                </div>
+                <div>
+                    <input class="bg-darkGreenCustom-600 hover:bg-greenCustom-700 text-whiteCustom font-bold py-2 rounded shadow-lg hover:shadow-xl transition duration-200" value="Sign me up!" type="submit" />
+                </div>
+            </form>
+        </section>
 
-    <input value="Sign me up!" type="submit" />
-</form>
-<br>
+        <section>
+            <div th:if="${param.error}">
+                Username already exists in database.
+            </div>
+        </section>
 
-<footer th:include="partials/footer" :: footer></footer>
+    </main>
+
+    <div class="max-w-lg max-auto flex justify-center text-whiteCustom">
+        <p class="text-whiteCustom">Don't have an account?</p><a th:href="@{|/sign-up|}" class="font-bold hover:underline">Sign Up!</a>
+    </div>
+
+    <footer th:include="partials/footer" :: footer></footer>
 
 </body>
 </html>
